tests/cli/snapshots/cli__reproduce_issue__style_tag_css_not_hardcoded.snap
---
source: tests/cli/reproduce_issue.rs
info:
  program: glot
  args:
    - check
    - hardcoded
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Loading..."  hardcoded-text
  --> ./src/components/ui/spinner.tsx:10:12
   |
10 |     <title>Loading...</title>
   |            ^


✖ 1 problems (1 error, 0 warnings)

----- stderr -----
